--- a/apps/basaltApp/templates/xgds_planner2/schedule.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/schedule.handlebars
@@ -8,7 +8,7 @@
 			<td><input type="text" name="schedule_date" id="id_schedule_date" {{#if planned_start_time}}value="{{ planned_start_time }}"{{/if}}</input></td>
 		</tr>
 		<tr>
-			<td><label for="id_flight">Flight</label></td>
+			<td><label for="id_flight">EVA</label></td>
 			<td><select name="flight" id="id_flight"> {{#each flight_names}}
 		        <option value="{{this}}" {{#if ../planExecution}}{{flightSelected this ../planExecution.flight}}{{/if}}>{{this}}</option>
 		        {{/each}}
