added live redirect and error page

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -23,7 +23,7 @@
  {% block nav %}
  <div class="row navbar-color" id="page-nav">
  <h1 class="two columns logo">
-		<a href="/" title="xGDS BASALT">
+		<a href="{% url 'live_index' %}" title="xGDS BASALT">
      		<img src="{{STATIC_URL}}basaltApp/css/logo.png" class="logo" alt="BASALT logo" width="250" height="80" gumby-retina>
      	</a>
      	</h1>
