--- a/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
@@ -56,7 +56,7 @@
 		<td >&nbsp;&nbsp;&nbsp;{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}: {{ flight.name }}</td>
 		<td></td>
 		<td></td>
-		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %} {% else %} <a href="{% url 'planner2_startFlight' flight.uuid %}">Start</a>{% endif %}</td>
+		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %} {% if not settings.GEOCAM_TRACK_SERVER_TRACK_PROVIDER %}<a href="{% url 'planner2_startFlight' flight.uuid %}">Start Video</a> {% endif %}{% else %} <a href="{% url 'planner2_startFlight' flight.uuid %}">Start</a>{% endif %}</td>
 		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{% elif flight.start_time %} <a href="{% url 'planner2_stopFlight' flight.uuid %}">Stop</a>{% endif %}</td>
 		<td></td>
 	</tr>
