--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -27,8 +27,8 @@
 	{% endif %}
 	var container = $('#notes_content');
 	var tbl = container.find('table#notes_list');
-	initializeNotesReference(container, '{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', '{{sample.collection_time|date:"Y-m-d H:i:s"}}' + ' UTC', '{{sample.collection_timezone}}');
-	getNotesForObject('{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', 'notes_content', tbl);
+	xgds_notes.initializeNotesReference(container, '{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', '{{sample.collection_time|date:"Y-m-d H:i:s"}}' + ' UTC', '{{sample.collection_timezone}}');
+	xgds_notes.getNotesForObject('{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', 'notes_content', tbl);
 	
 	// show the notes div
 	var notes_input_div = $("#notes_input");
@@ -37,7 +37,7 @@
 	
 	var taginput = notes_input_div.find('.taginput');
 	initializeInput($(taginput)[0]);
-	hookNoteSubmit();
+	xgds_notes.hookNoteSubmit();
 
 {% endblock otherJSInit %} 
 
@@ -124,7 +124,7 @@
 	</table>
 	<div id="complete_notes">
 		<strong>Notes</strong>
-		<div id="notes_content" class="tab-content active">
+		<div id="notes_content" class="tab-content active notes_content">
 		{% include 'xgds_notes2/notes_input_include.html' %}
 		{% include 'xgds_notes2/notes_table_small.html' %}
 		</div>
