added stop video

--- a/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
@@ -43,6 +43,7 @@
 		</tr>
 	</thead>
 	{% for group in groups %}
+	{% with videoEpisode=group.videoEpisode %}
 	<tr>
 		<td><a href="#">{{ group.name }}</a></td>
 		<td></td>
@@ -57,22 +58,23 @@
 		<td></td>
 		<td></td>
 		<td>{% if flight.start_time %}{% timezone flight.timezone %} {{flight.start_time|date:"Y-m-d H:i e"}}{% endtimezone %} {% if not settings.GEOCAM_TRACK_SERVER_TRACK_PROVIDER %}<a href="{% url 'planner2_startFlight' flight.uuid %}">Start Video</a> {% endif %}{% else %} <a href="{% url 'planner2_startFlight' flight.uuid %}">Start</a>{% endif %}</td>
-		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{% elif flight.start_time %} <a href="{% url 'planner2_stopFlight' flight.uuid %}">Stop</a>{% endif %}</td>
+		<td>{% if flight.end_time %} {% timezone flight.timezone %}{{flight.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{% if not settings.GEOCAM_TRACK_SERVER_TRACK_PROVIDER and videoEpisode %}<a href="{% url 'planner2_stopFlight' flight.uuid %}">Stop Video</a>{% endif %}{% elif flight.start_time %} <a href="{% url 'planner2_stopFlight' flight.uuid %}">Stop</a>{% endif %}</td>
 		<td></td>
 	</tr>
-	{% for pe in flight.plans.all %}
-	{% with pe.plan.escapedName|add:".pml" as filename %} 
-	<tr {% if not pe.end_time and pe.start_time %} style="background:lightgreen;" {% endif %}>
-		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'planner2_edit' pe.plan.id %}">{{ pe.plan.escapedName }}</a></td>
-		<td>{% if pe.ev %}{{ pe.ev}}{% endif %}</td>
-		<td>{% if pe.planned_start_time %}{% timezone flight.timezone %} {{ pe.planned_start_time|date:"Y-m-d H:i e"}}{% endtimezone %} <a href="{% url 'planner2_planExportTime' pe.plan.uuid filename pe.planned_start_time|date:'c' %}">PML</a>{% endif %}</td>
-		<td>{% if pe.start_time %}{% timezone flight.timezone %}  {{pe.start_time|date:"Y-m-d H:i e"}}{% endtimezone %} <a href="{% url 'planner2_planExportTime' pe.plan.uuid filename pe.start_time|date:'c' %}">PML</a>{% else %} <a href="{% url 'planner2_startPlan' pe.id %}">Start</a>  {% endif %}</td>
-		<td>{% if pe.end_time %} {% timezone flight.timezone %} {{pe.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{% elif pe.start_time %} <a href="{% url 'planner2_stopPlan' pe.id %}">Stop</a> {% endif %}</td>
-		<td>{% if not pe.start_time %}<a href="{% url 'planner2_deletePlanExecution' pe.id %}">Delete</a>{% endif %}</td>
-	</tr> 
+		{% for pe in flight.plans.all %}
+			{% with pe.plan.escapedName|add:".pml" as filename %} 
+			<tr {% if not pe.end_time and pe.start_time %} style="background:lightgreen;" {% endif %}>
+				<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'planner2_edit' pe.plan.id %}">{{ pe.plan.escapedName }}</a></td>
+				<td>{% if pe.ev %}{{ pe.ev}}{% endif %}</td>
+				<td>{% if pe.planned_start_time %}{% timezone flight.timezone %} {{ pe.planned_start_time|date:"Y-m-d H:i e"}}{% endtimezone %} <a href="{% url 'planner2_planExportTime' pe.plan.uuid filename pe.planned_start_time|date:'c' %}">PML</a>{% endif %}</td>
+				<td>{% if pe.start_time %}{% timezone flight.timezone %}  {{pe.start_time|date:"Y-m-d H:i e"}}{% endtimezone %} <a href="{% url 'planner2_planExportTime' pe.plan.uuid filename pe.start_time|date:'c' %}">PML</a>{% else %} <a href="{% url 'planner2_startPlan' pe.id %}">Start</a>  {% endif %}</td>
+				<td>{% if pe.end_time %} {% timezone flight.timezone %} {{pe.end_time|date:"Y-m-d H:i e"}}{% endtimezone %}{% elif pe.start_time %} <a href="{% url 'planner2_stopPlan' pe.id %}">Stop</a> {% endif %}</td>
+				<td>{% if not pe.start_time %}<a href="{% url 'planner2_deletePlanExecution' pe.id %}">Delete</a>{% endif %}</td>
+			</tr> 
+			{% endwith %}
+		{% endfor %}
+	{% endfor %}
 	{% endwith %}
-	{% endfor %}
-	{% endfor %}
 	{% endfor %}
 	</table>
 
