--- a/apps/basaltApp/templates/basaltApp/index.html
+++ b/apps/basaltApp/templates/basaltApp/index.html
@@ -41,7 +41,7 @@ When you are told there are active EVAs, please click on the BASALT logo in the 
   {% endif %}
   <tr>
     <td style="text-align:right"><strong>Feedback</strong></td>
-    <td>Send feedback to the xGDS developmen team.</td>
+    <td>Send feedback to the xGDS development team.</td>
   </tr>
 </table>
 {% endblock content %}
