--- a/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
+++ b/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
@@ -250,5 +250,8 @@ var indexFileUrl = null;
 	
 	{% block lastJsInit %}
 	initializePackery();
+	$(function() {
+		xgds_video.startPlayers();
+	});
 	{% endblock lastJsInit %}
  {% endblock jsInit %}
