--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -26,7 +26,7 @@
 		showOnMap([{{sample.toMapDict|json_dumps|safe}}]);
 	{% endif %}
 	var container = $('#notes_content');
-	var tbl = container.find('table#notes_list');
+	var tbl = container.find('table.notes_list');
 	xgds_notes.initializeNotesReference(container, '{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', '{{sample.collection_time|date:"Y-m-d H:i:s"}}' + ' UTC', '{{sample.collection_timezone}}');
 	xgds_notes.getNotesForObject('{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', 'notes_content', tbl);
 	
