added latest to search and fixed display of actual traverses and name of flights in map tree

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -48,7 +48,7 @@
 			<li {% currentnav *xgds_sample* %} >
 				<a href="{% url 'xgds_sample_labels' %}" title="sample">Sample</a>
 			</li>
-			<li {% currentnav search_map* %}>
+			<li {% currentnav search_map* basalt_live_objects%}>
 				<a href="{% url 'search_map' %}" title="Search">Search</a>
 			</li>
 			<li {% currentnav xgds_data_import %}>
