--- a/apps/basaltApp/templates/xgds_planner2/planIndex.html
+++ b/apps/basaltApp/templates/xgds_planner2/planIndex.html
@@ -32,6 +32,7 @@ table.planIndex td.exportFormat a {
 {% if settings.XGDS_PLANNER2_SCHEDULE_INCLUDED %}
 <input class="mybutton right" type="button" onclick="showScheduleDialog()" id="schedule_button" value="Schedule Selected" ></input>
 {% endif %}
+<a href="{% url 'planner2_planImport' %}"  class="mybutton" style="float:right; margin-bottom:3px;"> Import {{ settings.XGDS_PLANNER2_PLAN_MONIKER }}</a>
 <a href={% if XGDS_PLANNER2_CREATE_URL %} "{{ XGDS_PLANNER2_CREATE_URL }}" {% else %} "{% url 'planner2_planCreate' %}" {% endif %} class="mybutton" style="float:right; margin-bottom:3px;"> Create {{settings.XGDS_PLANNER2_PLAN_MONIKER}}</a>
 <table id="dataTable" class="planIndex">
 <thead class="table_header">
