added bearing distance plan with just the top

--- a/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
@@ -1,6 +1,7 @@
 <div class="plan-link" id="links-plan">
   <div class="tool-entry">
     <a href="/xgds_planner2/plan/bearingDistance/{{planId}}" target="_blank">Summary</a><br/>
+	<a href="/xgds_planner2/plan/bearingDistanceTop/{{planId}}" target="_blank">Summary (Top only)</a><br/>
 	{{#each planLinks}}
       	<a href="{{this}}" target="_new">{{@key}}</a><br/>
 	{{/each}}
