--- a/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
+++ b/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
@@ -61,10 +61,12 @@
 		   				<td> {{ episode.shortName }} </td>
 		   			</tr>
 	   			{% endif %}
+	   			{% if not isLive %}
 	   			<tr>
 	   				<td>Local Time: </td>
 	   				<td> <span id="sliderTimeLabel"></span></td>
 	   			</tr>
+	   			{% endif %}
 	   		</table>
 	   		</div>
 	   		<div id="seekTimeBox" >
@@ -78,7 +80,9 @@
  		
  		{% block ribbonSlider %}
  		<fieldset id="videoFieldset">
+ 			  {% if not isLive %}
  			  <div id="ribbon"></div>
+ 			  {% endif %}
 		 	  <div id="masterSlider" class="masterSlider" ><br/></div>
  		</fieldset>
  		{% endblock ribbonSlider %}
@@ -110,11 +114,13 @@
              		</div> <!--  player-container -->
              		<div id="{{ source.shortName }}Label" style="float:left;text-align:left;font-family:arial,verdana,helvetica"> </div>
              	</section>
+             	{% if not isLive %}
              	<section>
              		<div class="float-left">
                  	Local Time: <span id="testSiteTime{{ source.shortName }}">0</span>
              		</div>
              	</section>
+             	{% endif %}
             </div><!--  item -->
         {% endfor %}
         {% endblock videoSources %}
