updated search views to use datatables with ajax and server side search

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -49,7 +49,7 @@
 				<a href="{% url 'xgds_sample_labels' %}" title="sample">Sample</a>
 			</li>
 			<li {% currentnav search_map* basalt_live_objects%}>
-				<a href="{% url 'search_map' %}" title="Search">Search</a>
+				<a href="/xgds_map_server/search/Photo" title="Search">Search</a>
 			</li>
 			<li {% currentnav xgds_data_import %}>
 				<a href="{% url 'xgds_data_import' %}" title="Import">Import</a>
