--- a/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
+++ b/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
@@ -6,11 +6,11 @@
 		</tr>
 		<tr>
 			<th><label for="id_name">Label #:</label></th>
-			<td>{{label}}</td>
+			<td>{{label_number}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_region">Region:</label></th>
-			<td>{{region}}</td>
+			<td>{{region_name}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_year">Year:</label></th>
@@ -18,7 +18,7 @@
 		</tr>
 		<tr>
 			<th><label for="id_type">Sample Type:</label></th>
-			<td>{{sample_type}}</td>
+			<td>{{sample_type_name}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_number">Sample Location #:</label></th>
@@ -26,11 +26,11 @@
 		</tr>
 		<tr>
 			<th><label for="id_replicate">Replicate:</label></th>
-			<td>{{replicate}}</td>
+			<td>{{replicate_name}}</td>
 		</tr>	
 		<tr>
 			<th><label for="id_collector">Collector:</label></th>
-			<td>{{collector}}</td>
+			<td>{{collector_name}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_collection_time">Collection time:</label></th>
@@ -46,11 +46,11 @@
 		</tr>
 		<tr>
 			<th><label for="id_resource">Resource:</label></th>
-			<td>{{resource}}</td>
+			<td>{{resource_name}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_flight">EVA:</label></th>
-			<td>{{flight}}</td>
+			<td>{{flight_name}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_latitude">Latitude:</label></th>
@@ -62,6 +62,6 @@
 		</tr>
 		<tr>
 			<th><label for="id_altitude">Altitude:</label></th>
-			<td>{{alt}}</td>
+			<td>{{altitude}}</td>
 		</tr>
 	</table>
