--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -27,8 +27,8 @@
 	{% endif %}
 	var container = $('#notes_content');
 	var tbl = container.find('table.notes_list');
-	xgds_notes.initializeNotesReference(container, '{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', '{{sample.collection_time|date:"Y-m-d H:i:s"}}' + ' UTC', '{{sample.collection_timezone}}');
-	xgds_notes.getNotesForObject('{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', 'notes_content', tbl);
+	xgds_notes.initializeNotesReference(container, '{{sample.app_label}}', '{{sample.model_type}}', '{{sample.pk }}', '{{sample.collection_time|date:"Y-m-d H:i:s"}}' + ' UTC', '{{sample.collection_timezone}}');
+	xgds_notes.getNotesForObject('{{sample.model_type}}', '{{sample.model_type}}', '{{sample.pk }}', 'notes_content', tbl);
 	
 	// show the notes div
 	var notes_input_div = $("#notes_input");
