--- a/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
+++ b/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
@@ -21,8 +21,12 @@
 			<td>{{sample_type_name}}</td>
 		</tr>
 		<tr>
-			<th><label for="id_number">Sample Location #:</label></th>
+			<th><label for="id_number">Number:</label></th>
 			<td>{{number}}</td>
+		</tr>
+				<tr>
+			<th><label for="id_number">Station #:</label></th>
+			<td>{{station_number}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_replicate">Replicate:</label></th>
