--- a/apps/basaltApp/templates/basaltApp/kmlWrist.html
+++ b/apps/basaltApp/templates/basaltApp/kmlWrist.html
@@ -12,8 +12,20 @@
   <body>
   
   <h2>
+  {% if messages %}
+	 <div  id="messages" class="error">
+	    <ul class="messages" id="errorMessage" style="color:red;">
+	    {% for message in messages %}
+	        <li>{% if message.tags %} {{ message.tags }}: {% endif %}  {{ message }}</li>
+	    {% endfor %}
+	    </ul>
+	</div>
+	{% endif %}
   <p>
-  	<a href="/xgds_planner2/plan/export/f361af3d-fe29-4720-8fe7-09ebc94d2b0a/MD1_EVA1_Stn1_Stn2.kml">TODAY'S PLANNED TRAVERSE</a></html>
+  	<a href="/basaltApp/activePlan/EV1">EV1 PLANNED TRAVERSE</a></html>
+  </p>
+  <p>
+  	<a href="/basaltApp/activePlan/EV2">EV2 PLANNED TRAVERSE</a></html>
   </p>
   <p>
   	<a href="/track/trackIndex.kml">TRACK POSITIONS</a>
