--- a/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/plan-links.handlebars
@@ -7,10 +7,13 @@
 	{{/each}}
 	<p>
 	<h6>Call Sextant</h6>
-	Save any changes to this EVA BEFORE calling the Sextant path planner.<br/>
-	This will calculate a path if your EVA is within a Sextant region, and update the EVA with a detailed route.<br/>
+	Save changes BEFORE calling<br/> 
+	the Sextant path planner.<br/>
+	This will calculate a path if your EVA is within an expected DEM<br/>
+	and update the EVA with a detailed route.<br/>
 	You can control how it is optimized on the Meta tab.<br/>
-	You <strong>MUST</strong> choose an EV person and schedule the plan before you can call Sextant, use the Schedule tab.
+	You <strong>MUST</strong> choose an EV person and schedule<br/>
+	the plan before you can call Sextant, use the Schedule tab.<br/>
 	Note that running Sextant can take a few minutes.
 	<br/>
 	<form name='pextantForm' id="pextantForm" action="#" method="post">
