added 80 to dropdown for search

--- a/apps/basaltApp/templates/xgds_planner2/planIndex.html
+++ b/apps/basaltApp/templates/xgds_planner2/planIndex.html
@@ -160,7 +160,7 @@ $("#deleteButton").click(function() {
 });
 
 	defaultOptions['oLanguage'] = {
-	            "sLengthMenu": "Display _MENU_ plans of _LENGTH_"
+	            "sLengthMenu": "Display _MENU_ plans"
 	          };
 	defaultOptions['aoColumnDefs'] =[
 	            {
