--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -46,7 +46,7 @@
 				<a href="{% url 'xgds_notes_review' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
 			</li>
 			<li {% currentnav *xgds_sample* %} >
-				<a href="{% url 'xgds_sample_record' %}" title="sample">Sample</a>
+				<a href="{% url 'xgds_sample_record_edit' %}" title="sample">Sample</a>
 			</li>
 			<li {% currentnav search_map* basalt_live_objects%}>
 				<a href="/xgds_map_server/search/Photo" title="Search">Search</a>
