--- a/apps/basaltApp/templates/xgds_sample/sampleEdit.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleEdit.html
@@ -38,13 +38,18 @@
 
 {% block jsInit %} 
 {{ block.super }}
+// url to server side code that fetches sample info for given sample label or name.
+var getSampleInfoUrl = '{{ getSampleInfoUrl }}';
+var currentLabelNum = "{{currentLabelNum}}";
+var fieldsEnabledFlag = {{ fieldsEnabledFlag }};
+
+// add time picker 
 addDateTimePicker("id_collection_time", $('#id_collection_timezone').val());
 
 // initialize the notes when the window is ready
 $(document).ready(function() {
 	{% if form.instance %}
 	var thedata = [{{form.instance.toMapDict|json_dumps|safe}}];
-		console.log(thedata);
 		showOnMap([{{form.instance.toMapDict|json_dumps|safe}}]);
 	{% endif %}
 	
@@ -54,7 +59,6 @@ $(document).ready(function() {
 	xgds_notes.initializeNotesReference(container, '{{form.instance.app_label}}', '{{form.instance.model_type}}', '{{form.instance.pk }}', '{{form.instance.collection_time|date:"Y-m-d H:i:s"}}' + ' UTC', '{{form.instance.collection_timezone}}');
 	xgds_notes.getNotesForObject('{{form.instance.app_label}}', '{{form.instance.model_type}}', '{{form.instance.pk }}', 'notes_content', container.find('table.notes_list'));
 
-	xgds_sample.showReplicateOptions();
 	xgds_sample.initializeSampleEditForm();
 });
 {% endblock jsInit %} 
@@ -90,32 +94,41 @@ $(document).ready(function() {
     {% endfor %}
     </ol>
 	{% endif %}
-	<form class="updateSample" id="updateSampleForm" action="{% url 'xgds_sample_record_update' form.instance.label.number %}" method="post" enctype="multipart/form-data">
-		<input type=hidden name=sampleId value="{{ form.instance.pk }}">
+	<table>
+		<tr>
+			<th>
+				<select class="sample_info_type" name="get_sample">
+					<option value="labelNum">Label Number</option>
+					<option value="sampleName">Sample Name</option>
+				</select>
+			</th>
+			<td class='sample_info_type_value'><input id="id_label_number" min="0" name="label" type="number" />  Press enter to load data.</td>
+		</tr>
+	</table>
+	
+	<form class="updateSample" id="updateSampleForm" action="{% url 'xgds_sample_info_save' %}" method="post" enctype="multipart/form-data">
 		<table>
-			<tr>
-				<th><label for="id_label_number">Label Number:</label></th>
-				<td>{{ form.instance.label.number }} </td>
-			</tr>
 			{{ form.as_table }}
 		</table>
 		{% csrf_token %}
 		<a class="toggleInputFields" onclick="xgds_sample.toggleAdvancedInput();"> Open out-of-sim fields </a>
 		<div id="sample-edit-button-group">
-			<a href="{% url 'xgds_sample_delete_label' form.instance.label.number %}" onclick="return confirm('Are you sure you want to permanently delete this sample and label?')"class="mybutton small">Delete</a>
-			<a href="{% url 'search_map_single_object' settings.XGDS_SAMPLE_SAMPLE_KEY form.instance.pk %}" class="mybutton small">Cancel</a>
-			<input class="mybutton small" id="sample-info-submit" type="submit" value="Save"/>
+		<!-- 
+			<a href="{ % url 'xgds_sample_delete_label' form.instance.label.number % }" onclick="return confirm('Are you sure you want to permanently delete this sample and label?')"class="mybutton small">Delete</a>
+			<a href="{ % url 'search_map_single_object' settings.XGDS_SAMPLE_SAMPLE_KEY form.instance.pk % }" class="mybutton small">Cancel</a>
+ 		-->
+		<input class="mybutton small" id="sample-info-submit" type="submit" value="Save"/>
 		</div>
 	</form>
 	
 	<hr>
-	<div id="complete_notes">
+ 	<div id="complete_notes">
 		<strong>Notes</strong>
 		<div id="notes_content" class="tab-content active notes_content">
 		{% include 'xgds_notes2/notes_input_include.html' %}
 		{% include 'xgds_notes2/notes_table_small.html' %}
 		</div>
-	</div>
+	</div> 
 	
 	</div>
 </div>
@@ -124,24 +137,6 @@ $(document).ready(function() {
 {% endblock preMap %}
 
 {% block postMap %}
-<div class="grid-stack-item noresize" id='create_sample_from_label_num'
-        data-gs-x="3" data-gs-y="3"
-        data-gs-width="2" data-gs-height="1">
-        <div class="grid-stack-item-content" >
-		<i class="icon-lock-open pinDiv"></i><br />
-		<form class="label_number_form" id="label_number_form" action="{% url 'xgds_sample_record_edit' %}" method="post" enctype="multipart/form-data">
-			<strong> Look up sample </strong>
-			<table>
-				<tr>
-					<th><label for="id_label_number">Label # or sample name:</label></th>
-					<td><input id="id_label_number" maxlength="512" name="label_num_or_sample_name" type="text" /></td>
-				</tr>
-			</table>
-			{% csrf_token %}
-			<input id="record_sample_submit_btn" type="submit" class="small" value="Open"/> 
-		</form>
-	</div>
-</div>
 {% endblock postMap %}
 
 
