Sample editing form displays current label number and sample name

--- a/apps/basaltApp/templates/xgds_sample/sampleEdit.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleEdit.html
@@ -100,7 +100,8 @@ $(document).ready(function() {
 	</table>
 	</br>
 	
-	<div id="editing_title"><strong> </strong></div>
+	<div id="label_number_title"><strong> </strong></div>
+	<div id="sample_name_title"><strong> </strong></div>
 	{% if form.errors %}
     <ol>
     {% for error in form.errors %}
