now make wrist.kml for current flights positions not requiring checking trees

--- a/apps/basaltApp/templates/basaltApp/kmlWrist.html
+++ b/apps/basaltApp/templates/basaltApp/kmlWrist.html
@@ -30,7 +30,7 @@
   </p>
 {% endfor %}
   <p>
-  	<a href="/track/trackIndex.kml">TRACK POSITIONS</a>
+  	<a href="/basaltApp/wrist.kml">WORKING TRACK POSITIONS</a>
   </p>
 </h2>
     
