--- a/apps/basaltApp/templates/xgds_sample/sampleEdit.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleEdit.html
@@ -25,7 +25,7 @@
 	<script type="text/javascript">
 		var collectors = {{ users|safe }};
 	</script>
-	<!-- <script type="text/javascript" src='{{ STATIC_URL }}xgds_sample/js/sampleEdit.js'></script> -->
+	<script type="text/javascript" src='{{ STATIC_URL }}xgds_sample/js/sampleEdit.js'></script>
 	<script type="text/javascript" src='{{ STATIC_URL }}xgds_sample/js/basaltSampleEdit.js'></script>
 	
     <!--  load handlebars -->
@@ -97,7 +97,7 @@ $(document).ready(function() {
         data-gs-x="0" data-gs-y="0"
         data-gs-width="3" data-gs-height="5">
             <div class="grid-stack-item-content">
-	<i class="icon-lock-open pinDiv"></i>
+	<i class="icon-lock pinDiv"></i>
 	<div id="error-message"></div>
 	<div><strong> Look up sample </strong></div>
 	<table id="lookupsample_table">
@@ -108,7 +108,7 @@ $(document).ready(function() {
 					<option value="sampleName">Sample Name</option>
 				</select>
 			</th>
-			<td class='sample_info_type_value'><input id="id_search_input" min="0" />  Press enter to load data.</td>
+			<td class='sample_info_type_value'><input id="id_search_input" min="0" />  &nbsp;&nbsp;<button id="load" onclick="xgds_sample.onEnterLoadSampleInfo()" type="button" class="small">Load</button> </td>
 		</tr>
 	</table>
 	</br>
