updated searchable fields for sample to include numbers

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -50,7 +50,7 @@
 		{% block sitemenu-content %}
 		<ul >
 			{% if settings.HOSTNAME = 'boat' %}
-			<li ><h1 style="color:yellow;">FIELD</h1></li>
+			<li ><span style="color:yellow;">FIELD</span></li>
 			{% endif %}
 			<!-- TOP LEVEL NAVIGATION LINKS GO HERE --> 
 			<li {% currentnav map* xgds_map_server* %}>
