--- a/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
+++ b/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
@@ -1,12 +1,13 @@
-  <style type="text/css">
-    .flotPlot {
-        width: 100%;
-        height: 200px;
-        margin-bottom: 10px;
-    }
-  </style>
+ <style type="text/css">
+   .flotPlot {
+       width: 100%;
+       height: 200px;
+       margin-bottom: 10px;
+   }
+ </style>
 
-<div> <strong>{{instrument_name}}</strong> <!--<a id="edit_instrument_button" href="/xgds_instrument/edit/{{pk}}" class="mybutton small" target="_blank">Edit</a> --></div>
+<div> <strong>{{instrument_name}}</strong> 
+<a id="edit_instrument_button" href="/xgds_instrument/edit/{{instrument_name}}/{{pk}}" class="mybutton small" target="_blank">Edit</a></div>
 	<table>
 		{{#if name}}
 		<tr>
