--- a/apps/basaltApp/templates/xgds_map_server/mapSearch_subnav.html
+++ b/apps/basaltApp/templates/xgds_map_server/mapSearch_subnav.html
@@ -8,7 +8,7 @@
 		<li class="nav-item {% if modelName == 'ASD' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'ASD'%}">ASD</a></li>
 		<li class="nav-item {% if modelName == 'FTIR' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'FTIR'%}">FTIR</a></li>
 		<!-- <li class="nav-item {% if modelName == 'pXRF' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'pXRF'%}">pXRF</a></li> -->
-		<li class="nav-item {% if modelName == 'Note' %}currentnav{% endif %}"><a href="{% url 'xgds_notes_search_map' %}">Notes</a></li>
+		<li class="nav-item {% if modelName == 'Note' %}currentnav{% endif %}"><a href="{% url 'search_xgds_notes_map' %}">Notes</a></li>
 		<li class="nav-item {% if model_names %}currentnav{% endif %}"><a href="{% url 'basalt_live_objects'%}">Latest Data</a></li>
   	</ul>
   	</nav>
