alt and head instead of altitude and heading

--- a/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
+++ b/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
@@ -68,10 +68,10 @@
 			<th><label for="id_longitude">Longitude:</label></th>
 			<td>{{lon}}</td>
 		</tr>
-		{{#if altitude}}
+		{{#if alt}}
 		<tr>
 			<th><label for="id_altitude">Altitude:</label></th>
-			<td>{{altitude}}</td>
+			<td>{{alt}}</td>
 		</tr>
 		{{/if}}
 		<div class="plot-container">
