--- a/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
+++ b/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
@@ -66,6 +66,6 @@
 		</tr>
 		<tr>
 			<th><label for="id_altitude">Altitude:</label></th>
-			<td>{{altitude}}</td>
+			<td>{{alt}}</td>
 		</tr>
 	</table>
