--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 {% load pipeline %}
 {% load staticfiles %}
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     {% block cssMain %}
     <link rel="stylesheet" type="text/css" href="{% static 'gumby/css/gumby.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     {% endblock cssMain %}
     
     {% if settings.HOSTNAME = 'boat' %}
@@ -127,6 +128,7 @@
     
     {% block scripts %}
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
+	<script src="{{ STATIC_URL }}xgds_core/js/helpPopup.js"></script>
     {% endblock %}
 
     <script type="text/javascript">
