--- a/apps/basaltApp/templates/base_bootstrap.html
+++ b/apps/basaltApp/templates/base_bootstrap.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 {% load pipeline %}
 {% load staticfiles %}
 <html xmlns="http://www.w3.org/1999/xhtml">
