--- a/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
+++ b/apps/basaltApp/templates/xgds_video/video_recorded_playbacks.html
@@ -28,7 +28,7 @@
 {% endblock %}
  
 {% block contents %}
-
+    		
 	{% block errorMessages %}
 	{% if messages %}
 	    <ul class="messages" id="errorMessage" style="color:red;">
@@ -86,7 +86,6 @@
 		 	  <div id="masterSlider" class="masterSlider" ><br/></div>
  		</fieldset>
  		{% endblock ribbonSlider %}
- 		
 
 		{% block packery %}
         <div id="container"> 
@@ -97,7 +96,7 @@
 	            <div class="buttons">
 	                 <div class="toprow-left"><b>{{ source.name }}</b></div>
 	                 <a class="mybutton toprow-right small" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="{% if sources|length > 1 %}{{flightName}}_{{source.shortName}}{% else %}_blank{% endif %}" style="width:130px">New Window</a>
-                     <a class="mybutton toprow-right small" href="#" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">Still</a>
+                     <!-- <a class="mybutton toprow-right small" href="#" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">Still</a> -->
                      {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
 	                     <a class="mybutton" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
@@ -129,7 +128,7 @@
         <div class="item {% if sources|length > 1 %}w2{% endif %} freeAspect" id="notesDiv" style="background-color:#F9FADE;">
         <div id="messageDiv">
                 </div>
-                <table id="notes_list" class="display notes_list">
+                <table id="notes_list" class="notes_list display">
                 </table>
         </div>
         {% endblock otherPackery %}
@@ -218,7 +217,6 @@ var indexFileUrl = null;
     	xgds_video.setupSlider();
     }
     xgds_video.setupJWplayer({"mute":true}, "100%");
-    xgds_notes.setupNotesUI();
     {% endif %}
     {% endblock hookControls %}
     
@@ -258,6 +256,7 @@ var indexFileUrl = null;
 	initializePackery();
 	$(function() {
 		xgds_video.startPlayers();
+		xgds_notes.setupNotesUI();
 	});
 	{% endblock lastJsInit %}
  {% endblock jsInit %}
