--- a/apps/basaltApp/templates/xgds_map_server/mapSearch_subnav.html
+++ b/apps/basaltApp/templates/xgds_map_server/mapSearch_subnav.html
@@ -6,7 +6,8 @@
 	{% help_button help_content_path help_title %}
 	<ul>
 		<li class="nav-item {% if modelName == 'Photo' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'Photo'%}">{{settings.XGDS_IMAGE_IMAGE_SET_MONIKER}}</a></li>
-		<li class="nav-item {% if modelName == 'Sample' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'Sample'%}">Sample</a></li>
+		<!-- <li class="nav-item {% if modelName == 'Sample' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'Sample'%}">Sample</a></li>-->
+		<li class="nav-item {% if modelName == 'Sample' %}currentnav{% endif %}"><a href="{% url 'xgds_sample_fullsearch'%}">Sample</a></li>
 		<li class="nav-item {% if modelName == 'ASD' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'ASD'%}">ASD</a></li>
 		<li class="nav-item {% if modelName == 'FTIR' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'FTIR'%}">FTIR</a></li>
 		<li class="nav-item {% if modelName == 'pXRF' %}currentnav{% endif %}"><a href="{% url 'search_map_object' 'pXRF'%}">pXRF</a></li>
