fixed map record notes template so adding note uses overall record function

--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -136,6 +136,9 @@
 	<script src="{{ STATIC_URL }}xgds_core/js/helpPopup.js"></script>
     {% endblock %}
     
+    {% block postscripts %}
+	{% endblock postscripts %}
+    
     <script type="text/javascript">
       {% block jsSetVars %}
       var defaultTimeZone = '{{TIME_ZONE}}';
