--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -132,6 +132,7 @@
 	{% endblock prescripts %}
 	
     {% block scripts %}
+    <script src="{{ EXTERNAL_URL }}lodash/lodash.min.js"></script>
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
 	<script src="{{ STATIC_URL }}xgds_core/js/helpPopup.js"></script>
     {% endblock %}
