updated wrist display to have so2 levels

--- a/apps/basaltApp/templates/basaltApp/kmlWrist.html
+++ b/apps/basaltApp/templates/basaltApp/kmlWrist.html
@@ -32,6 +32,9 @@
   <p>
   	<a href="/basaltApp/wrist.kml" target="_blank" download>WORKING TRACK POSITIONS</a>
   </p>
+  <p>
+  	<a href="/basaltApp/hvnp_so2_link.kml" target="_blank" download>AIR QUALITY</a>
+  </p>
 </h2>
     
   
