first iteration uploading plot for pxrf

--- a/apps/basaltApp/templates/xgds_instrument/editInstrumentData.html
+++ b/apps/basaltApp/templates/xgds_instrument/editInstrumentData.html
@@ -54,6 +54,7 @@
 
 {% block scripts %}
   {{ block.super }}
+  {{ form.media }}
   	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
 	{% include "xgds_core/timeJS.html" %}
 	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.min.js"></script>
