--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -132,8 +132,10 @@
 	{% endblock prescripts %}
 	
     {% block scripts %}
-    <script src="{{ EXTERNAL_URL }}lodash/lodash.min.js"></script>
+    <!-- <script src="{{ EXTERNAL_URL }}lodash/dist/lodash.min.js"></script> -->
+    <script src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}xgds_core/js/jqueryUtils.js"></script>
 	<script src="{{ STATIC_URL }}xgds_core/js/helpPopup.js"></script>
     {% endblock %}
     
