bootstrap css progress

--- a/apps/basaltApp/templates/basaltApp/editEV.html
+++ b/apps/basaltApp/templates/basaltApp/editEV.html
@@ -9,11 +9,11 @@
 For Sextant to calculate a traverse we have to specify the mass of the crewmember executing the EVA.<br/>
 <i>Mass in kg</i>
 <form action="{% if pk %}{% url 'planner2_re_save_ev' pk %}{% else %}{% url 'planner2_save_ev' %}{% endif %}" method="post">
-<table>
+<table class="table-striped">
 {{ form.as_table }}
 </table>
 <input type='hidden' id="id_pk" value="{{pk}}">
-<input class="mybutton small" type="submit" value="Save">
+<input class="btn btn-primary small" type="submit" value="Save">
 </form>
 </p>
 
