--- a/apps/basaltApp/templates/basaltApp/setup.html
+++ b/apps/basaltApp/templates/basaltApp/setup.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<table cellpadding="5" cellspacing="0" width="100%">
+<table cellpadding="5" cellspacing="0" width="100%" class="table-striped">
   <tr>
     <td style="text-align:right"><strong>Note Tags</strong></td>
     <td>Customize the tags and hierarchy for recording notes.  <a href="{% url 'xgds_notes_edit_tags' %}">Edit Note Tags</a></td>
