--- a/apps/basaltApp/templates/xgds_instrument/editInstrumentData.html
+++ b/apps/basaltApp/templates/xgds_instrument/editInstrumentData.html
@@ -45,7 +45,7 @@
     {{ form.as_table }}
     </table>
     <div id="buttons" >
-        <input id="save" class="mybutton" type="submit" value="Save">
+        <input id="save" class="btn btn-primary" type="submit" value="Save">
     </div>
 </form>
 
