--- a/apps/basaltApp/templates/basaltApp/index.html
+++ b/apps/basaltApp/templates/basaltApp/index.html
@@ -8,7 +8,7 @@ When you are told there are active EVAs, please click on the BASALT logo in the 
 </br>
 {% endif %}
 
-<table cellpadding="5" cellspacing="0" width="100%">
+<table cellpadding="5" cellspacing="0" width="100%" class="table-striped">
   <tr>
     <td style="text-align:right"><strong>Map</strong></td>
     <td>View and manage map layers.  Get Google Earth link.</td>
