--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -1,158 +1,103 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 {% load pipeline %}
 {% load staticfiles %}
-<html xmlns="http://www.w3.org/1999/xhtml">
+
+<html lang="en">
   <head>
-  	<meta charset="utf-8">
-    <title>
-    {% block title %}{% block siteSection %}{% endblock siteSection%} {% block siteTitle %}BASALT{% endblock siteTitle%}{% endblock title%}
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    {% block cssMain %}
-    <link rel="stylesheet" type="text/css" href="{% static 'gumby/css/gumby.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	{% block cssMain %}
+    <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.css' %}">
     {% endblock cssMain %}
     
-    {% if settings.HOSTNAME = 'boat' %}
- 	<style>
- 	.logo {
-    	background: #248f59;
-	}
-	.navbar-color {
-    	background-color: #248f59;
-	}
-	.navbar {
-		background-color: #248f59;
-	}
-	</style>
-	{% endif %}
-	
- 	{% block cssExtras %}
+    {% block cssExtras %}
     {% endblock cssExtras %}
   	{% block headExtras %}
   	{% endblock headExtras%}
   </head>
   <body>
   
- {% load nav %}
- {% block nav %}
- <div class="row navbar-color" id="page-nav">
- <h1 class="two columns logo">
-		<a href="{% url 'live_index' %}" title="xGDS BASALT">
-     		<img src="{{STATIC_URL}}basaltApp/css/logo.png" class="logo" alt="BASALT logo" width="250" height="80" gumby-retina>
+  {% load nav %}
+  {% block nav %}
+	<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+		<button class="navbar-toggler navbar-toggler-right" type="button"
+			data-toggle="collapse" data-target="#mainNavbar"
+			aria-controls="mainNavbar" aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<a href="{% url 'live_index' %}" title="xGDS BASALT" class="navbar-brand">
+     		<img src="{{STATIC_URL}}basaltApp/css/logo.png" class="logo" alt="BASALT logo" width="200" height="64" >
      	</a>
-     	</h1>
- <div class="row navbar ten columns" id="nav1">
-    <!-- Toggle for mobile navigation, targeting the <ul> -->
-    <a class="toggle" gumby-trigger="#nav1 > ul" href="#"><i class="icon-menu"></i></a>
-		{% if navigation_tab %}
-        	{% nav navigation_tab %}
-        {% endif %}
-		{% block sitemenu-content %}
-		<ul >
-			{% if settings.HOSTNAME = 'boat' %}
-			<li ><span style="color:yellow;">FIELD</span></li>
-			{% endif %}
-			<!-- TOP LEVEL NAVIGATION LINKS GO HERE --> 
-			<li {% currentnav map* xgds_map_server* %}>
-				<a href="{% url 'map' %}" title="Map">Map</a>
-			</li>
-			<li {% currentnav planner2* *video* %}>
-				<a href="{% url 'planner2_flownFlights' %}" title="{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}">{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}</a>
-			</li>
-			<li {% currentnav *note* %}>
-				<a href="{% url 'search_xgds_notes_map' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
-			</li>
-			<li {% currentnav *xgds_sample* %} >
-				<a href="{% url 'xgds_sample_record_edit' %}" title="sample">Sample</a>
-			</li>
-			<li {% currentnav search_map* basalt_live_objects%}>
-				<a href="/xgds_map_server/search/Photo" title="Search">Search</a>
-			</li>
-			<li {% currentnav xgds_data_import %}>
-				<a href="{% url 'xgds_data_import' %}" title="Import">Import</a>
-			</li>
-			<!-- <li {% currentnav *setup* %} >
-				<a href="{% url 'setup_intro' %}" title="Setup">Setup</a>
-			</li> -->
-			{% if settings.GEOCAM_UTIL_LIVE_MODE %}
-			<li {% currentnav *tatus* %}>
-            	<a href="{% url 'xgds_status_board_showSubsystemStatus' %}">Status</a>
-            </li>
-			{% endif %}
-			<li {% currentnav email_feedback %}>
-            	<a href="{% url 'email_feedback' %}">Feedback</a>
-            </li>
-			
-            <li>
-            {% if user.is_authenticated %}
-                 <a href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
-            {% else %} <!-- user.is_authenticated -->
-                <a href="{{ login_url_with_next }}"title="Login">Login</a>
-            {% endif %} 
-            </li>
-         </ul>	
-          {% block sitemenu-content-secondary %}
-  		  {% endblock sitemenu-content-secondary %}
-  		  <a class="toggle" gumby-trigger=".sitemenu-nav-secondary ul" href="#"><i class="icon-menu subnav" ></i></a>
-   </div>
+		<div class="collapse navbar-collapse" id="mainNavbar">
+			<ul class="navbar-nav mr-auto">
+				<li class='nav-item {% currentnav map* xgds_map_server* %}'>
+					<a class="nav-link {% currentnav map* xgds_map_server* %}" href="{% url 'map' %}" title="Map">Map</a>
+				</li>
+				<li class='nav-item {% currentnav planner2* *video* %}'>
+					<a class="nav-link {% currentnav planner2* *video* %}" href="{% url 'planner2_flownFlights' %}" title="{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}">{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}</a>
+				</li>
+				<li class='nav-item {% currentnav *note* %}'>
+					<a class="nav-link {% currentnav *note* %}" href="{% url 'search_xgds_notes_map' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
+				</li>
+				<li class='nav-item {% currentnav *xgds_sample* %}' >
+					<a class="nav-link {% currentnav *xgds_sample* %}" href="{% url 'xgds_sample_record_edit' %}" title="Sample">Sample</a>
+				</li>
+				<li class='nav-item {% currentnav search_map* basalt_live_objects%}'>
+					<a class="nav-link {% currentnav search_map* basalt_live_objects%}" href="/xgds_map_server/search/Photo" title="Search">Search</a>
+				</li>
+				<li class='nav-item {% currentnav xgds_data_import %}'>
+					<a class="nav-link {% currentnav xgds_data_import %}" href="{% url 'xgds_data_import' %}" title="Import">Import</a>
+				</li>
+				{% if settings.GEOCAM_UTIL_LIVE_MODE %}
+				<li class='nav-item {% currentnav *tatus* %}'>
+	            	<a class="nav-link {% currentnav *tatus* %}" href="{% url 'xgds_status_board_showSubsystemStatus' %}">Status</a>
+	            </li>
+	            {% endif %}
+	            </ul>
+	            
+	            <span class="navbar-text">
+	            {% if user.is_authenticated %}
+	                 <a class="btn btn-primary btn btn-primary-secondary btn btn-primary-sm" href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
+	            {% else %} <!-- user.is_authenticated -->
+	                <a class="btn btn-primary btn btn-primary-secondary btn btn-primary-sm" href="{{ login_url_with_next }}"title="Login">Login</a>
+	            {% endif %} 
+	            </span>
+	            
+		</div>
+	</nav>
+	
+	{% block sitemenu-content-secondary %}
+  	{% endblock sitemenu-content-secondary %}
+	
+	{% endblock nav %}
   
-   </div>
-
-  {% endblock sitemenu-content %}
-
-{% endblock nav %}
-
-{% block subnav %}
-{% endblock subnav %}
-
-	
-{% if errorstring %}
-    <div class="row errors"  id="errors">
-    <ul>
-	    <li class="danger alert">
-	 	{{errorstring}}
-	 	</li>
- 	</ul>
-   </div>
-{% endif %}
-
-	<div class="row twelve columns" id="page-content">			
-      {% block contents %}
-      	{% block content %}
-      	{% endblock %}
-      {% endblock %}
-    </div>
-    
-    
-   	{% block footer %}
-	{% endblock footer %}
-	
-	{% block prescripts %}
-	{% endblock prescripts %}
+  <div class="container-fluid">
+  {% block contents %}
+  {% block content %}
+  {% endblock content %}
+  {% endblock contents %}
+  </div>
+  
+  {% block prescripts %}
+  {% endblock prescripts %}
 	
     {% block scripts %}
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_core/js/jqueryUtils.js"></script>
 	<script src="{{ STATIC_URL }}xgds_core/js/helpPopup.js"></script>
+	<script src="{{ EXTERNAL_URL }}tether/dist/js/tether.min.js"></script>
+	<script src="{{ EXTERNAL_URL }}bootstrap/dist/js/bootstrap.min.js"></script>
+	
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     {% endblock %}
     
     {% block postscripts %}
 	{% endblock postscripts %}
-    
-    <script type="text/javascript">
-      {% block jsSetVars %}
-      var defaultTimeZone = '{{TIME_ZONE}}';
-      {% endblock jsSetVars %}
-
-      {% block jsInit %}
-      {% endblock jsInit %}
-      
-    </script>
-    
-    {% block postContents %}
-    {% endblock postContents %}
-
   </body>
 </html>
