--- a/apps/basaltApp/templates/base_bootstrap.html
+++ b/apps/basaltApp/templates/base_bootstrap.html
@@ -1,145 +1,97 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 {% load pipeline %}
 {% load staticfiles %}
-<html xmlns="http://www.w3.org/1999/xhtml">
+
+<html lang="en">
   <head>
-  	<meta charset="utf-8">
-  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  	
-    <title>
-    {% block title %}{% block siteSection %}{% endblock siteSection%} {% block siteTitle %}BASALT{% endblock siteTitle%}{% endblock title%}
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    {% block cssMain %}
-    <link rel="stylesheet" type="text/css" href="{% static 'tether/dist/css/tether.min.css' %}"> 
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/xgds/css/styles.css' %}">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	{% block cssMain %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
     {% endblock cssMain %}
     
- 	{% block cssExtras %}
+    {% block cssExtras %}
     {% endblock cssExtras %}
   	{% block headExtras %}
   	{% endblock headExtras%}
   </head>
   <body>
   
- {% load nav %}
- {% block nav %}
- 
- <nav class="navbar navbar-light bg-primary" id="page-nav">
-	<a href="/" title="xGDS BASALT" class="navbar-brand">
-    		<img src="{{STATIC_URL}}basaltApp/css/logo.png" class="logo" alt="BASALT logo" width="250" height="80">
-    	</a>
-		{% if navigation_tab %}
-        	{% nav navigation_tab %}
-        {% endif %}
-		{% block sitemenu-content %}
-		<ul class="nav navbar-nav">
-			<!-- TOP LEVEL NAVIGATION LINKS GO HERE --> 
-			<li {% currentnav map* xgds_map_server* %}>
-				<a class="nav-link" href="{% url 'map' %}" title="Map">Map</a>
-			</li>
-			<li {% currentnav planner2* %}>
-				<a class="nav-link" href="{% url 'planner2_index' %}" title="{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}">{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}</a>
-			</li>
-			<li {% currentnav *xgds_sample* %} >
-				<a class="nav-link" href="{% url 'xgds_sample_labels' %}" title="sample">Sample</a>
-			</li>
- 			<li {% currentnav *note* %}>
-				<a class="nav-link" href="{% url 'xgds_notes_review' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
-			</li>
-			<li {% currentnav search_map* %}>
-				<a class="nav-link" href="{% url 'search_map' %}" title="Search">Search</a>
-			</li>
-			<li {% currentnav xgds_data_import %}>
-				<a class="nav-link" href="{% url 'xgds_data_import' %}" title="Import">Import</a>
-			</li>
-			<li {% currentnav email_feedback %}>
-            	<a class="nav-link" href="{% url 'email_feedback' %}">Feedback</a>
-            </li>
-			
-            <li>
-            {% if user.is_authenticated %}
-                 <a class="nav-link" href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
-            {% else %} <!-- user.is_authenticated -->
-                <a class="nav-link" href="{{ login_url_with_next }}"title="Login">Login</a>
-            {% endif %} 
-            </li>
-         </ul>	
-          {% block sitemenu-content-secondary %}
-  		  {% endblock sitemenu-content-secondary %}
-   </div>
+  {% load nav %}
+  {% block nav %}
+	<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+		<button class="navbar-toggler navbar-toggler-right" type="button"
+			data-toggle="collapse" data-target="#mainNavbar"
+			aria-controls="mainNavbar" aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<a class="navbar-brand" href="#">Navbar</a>
+		<div class="collapse navbar-collapse" id="mainNavbar">
+			<ul class="navbar-nav mr-auto">
+				<li {% currentnav map* xgds_map_server* %}>
+					<a class="nav-link" href="{% url 'map' %}" title="Map">Map</a>
+				</li>
+				<li {% currentnav planner2* *video* %}>
+					<a class="nav-link" href="{% url 'planner2_flownFlights' %}" title="{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}">{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}</a>
+				</li>
+				<li {% currentnav *note* %}>
+					<a class="nav-link" href="{% url 'search_xgds_notes_map' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
+				</li>
+				<li {% currentnav *xgds_sample* %} >
+					<a class="nav-link" href="{% url 'xgds_sample_record_edit' %}" title="Sample">Sample</a>
+				</li>
+				<li {% currentnav search_map* basalt_live_objects%}>
+					<a class="nav-link" href="/xgds_map_server/search/Photo" title="Search">Search</a>
+				</li>
+				<li {% currentnav xgds_data_import %}>
+					<a class="nav-link" href="{% url 'xgds_data_import' %}" title="Import">Import</a>
+				</li>
+				{% if settings.GEOCAM_UTIL_LIVE_MODE %}
+				<li {% currentnav *tatus* %}>
+	            	<a class="nav-link" href="{% url 'xgds_status_board_showSubsystemStatus' %}">Status</a>
+	            </li>
+	            {% endif %}
+	            </ul>
+	            
+	            <span class="navbar-text">
+	            {% if user.is_authenticated %}
+	                 <a class="btn btn-primary btn btn-primary-secondary btn btn-primary-sm" href="{{ logout_url }}" title="Logout">Logout&nbsp;&nbsp;{{ user.first_name }}</a>
+	            {% else %} <!-- user.is_authenticated -->
+	                <a class="btn btn-primary btn btn-primary-secondary btn btn-primary-sm" href="{{ login_url_with_next }}"title="Login">Login</a>
+	            {% endif %} 
+	            </span>
+		</div>
+	</nav>
+	{% endblock nav %}
   
-   </nav>
-
-  {% endblock sitemenu-content %}
-
-{% endblock nav %}
-
-{% block subnav %}
-{% endblock subnav %}
-
+  <div class="container">
+  {% block contents %}
+  {% block content %}
+  {% endblock content %}
+  {% endblock contents %}
+  </div>
+  
+  {% block prescripts %}
+  {% endblock prescripts %}
 	
-{% if errorstring %}
-    <div class="row errors"  id="errors">
-    <ul>
-	    <li class="danger alert">
-	 	{{errorstring}}
-	 	</li>
- 	</ul>
-   </div>
-{% endif %}
-	
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-12" id="page-content">
-			<br/>
-	      	{% block contents %}
-	      		{% block content %}
-	      		{% endblock %}
-	      	{% endblock %}
-	      	</div>
-    	</div>
-    </div>
-    
-    
-   	{% block footer %}
-	{% endblock footer %}
-	
-    
     {% block scripts %}
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
-    <script src="{{ EXTERNAL_URL }}tether/dist/js/tether.min.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/xgds/js/bootstrap.min.js"></script>
-    
-    <!--  <script src="{{ EXTERNAL_URL }}bootstrap/dist/js/bootstrap.min.js"></script> -->
+	<script type="text/javascript" src="{{ STATIC_URL }}xgds_core/js/jqueryUtils.js"></script>
+	<script src="{{ STATIC_URL }}xgds_core/js/helpPopup.js"></script>
+	<script src="{{ EXTERNAL_URL }}tether/dist/tether.min.js"></script>
+	<script src="{{ EXTERNAL_URL }}bootstrap/dist/bootstrap.min.js"></script>
+	
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     {% endblock %}
-
-    <script type="text/javascript">
-      {% block jsSetVars %}
-      var defaultTimeZone = '{{TIME_ZONE}}';
-      {% endblock jsSetVars %}
-
-      {% block jsInit %}
-      {% endblock jsInit %}
-      
-    </script>
     
-    {% block postContents %}
-    {% block notesSession %}
-    {% if user.is_authenticated %}
-      {% if not request.session.notes_user_session %}
-      	<script  src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
-      	<style type="text/css" title="currentStyle">
-		@import "{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css";
-		</style>
-      	{% load user_session_popup %}
-      	{% show_user_session_popup %}
-      {% endif %}
-     {% endif %}
-    
-      {% endblock notesSession %}
-    {% endblock postContents %}
-
+    {% block postscripts %}
+	{% endblock postscripts %}
   </body>
 </html>
