--- a/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
+++ b/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
@@ -1,18 +1,20 @@
 {% block sitemenu-content-secondary %}
 {% load nav %}
-<div class="sitemenu-nav-secondary">
-	<nav class="subnav">
-	<ul>
-		<li {% currentnav planner2_index %}><a href="{% url 'planner2_index' %}"> {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a></li>
-		<li {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan %}><a href="{% url 'planner2_flownFlights' %}">{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a></li>
-		<li {% currentnav planner2_edit_ev %}><a href="{% url 'planner2_edit_ev' %}"> Crew Mass </a></li>
+<div class="subnav">
+	<ul class="nav nav-pills bg-body">
+		<li class='nav-item '>
+			<a class="nav-link {% currentnav planner2_index %} " href="{% url 'planner2_index' %}"> {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a>
+		</li>
+		<li class='nav-item'>
+			<a class="nav-link {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan %}" href="{% url 'planner2_flownFlights' %}">{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a>
+		</li>
+		<li class='nav-item'><a class="nav-link {% currentnav planner2_edit_ev %}" href="{% url 'planner2_edit_ev' %}"> Crew Mass </a></li>
 		<!-- 
-	    <li {% currentnav planner2_help %}><a href="{% url 'planner2_help' %}">Planner Help</a></li>
+	    <li class='nav-item'><a class='nav-link {% currentnav planner2_help %}' href="{% url 'planner2_help' %}">Planner Help</a></li>
 	     -->
 		{% if plan_json %}
-			<li {% currentnav planner2_edit %} ><a> Edit {{ plan_name }}</a></li>
+			<li class='nav-item ' ><a class="nav-link {% currentnav planner2_edit %}"> Edit {{ plan_name }}</a></li>
 		{% endif %}
 	</ul>
-	</nav>
 </div>
 {% endblock %}
