--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -62,9 +62,9 @@
 	<i class="icon-lock-open pinDiv"></i><br />
 	<div id="save-status"> {{status}} </div>
 	
-	<div> <strong> Viewing sample</strong> <a id="edit_sample_button" href="{% url 'xgds_sample_record_update' sample.label.number %}" class="mybutton small">Edit</a> </div>
+	<div> <strong> Viewing sample</strong> <a id="edit_sample_button" href="{% url 'xgds_sample_record_update' sample.label.number %}" class="btn btn-primary small">Edit</a> </div>
 	<input type=hidden name=sampleId value="{{ sample.pk }}">
-	<table>
+	<table class="table-striped">
 		<tr>
 			<th><label for="id_name">Name:</label></th>
 			<td> {{ sample.name }}</td>
@@ -150,7 +150,7 @@
 				</tr>
 			</table>
 			{% csrf_token %}
-			<input id="record_sample_submit_btn" type="submit" class="small" value="Open"/> 
+			<input id="record_sample_submit_btn btn-primary" type="submit" class="small" value="Open"/> 
 		</form>
 	</div>
 </div>
